# neiros-veceditor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vector_editor.db
src/vector_editor/: app.py
src/vector_editor/cli/: controller.py  menu.py  views.py
src/vector_editor/domain/: base.py  errors.py  shapes.py
src/vector_editor/repositories/: base.py  memory.py  sqlite.py
src/vector_editor/services/: shape_service.py
src/vector_editor_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_app.py  test_controller.py  test_domain.py  test_menu.py  test_repository.py  test_service.py  test_sqlite_repository.py
